[package]
name = "fluentbit"
version = "0.1.0"
authors = ["neithanmo <neithanmo@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["log", "logger"]
repository = "https://github.com/neithanmo/fluent-bit-rs"

[dependencies]
libc = "0.2"
lazy_static = "1.3.0"

[lib]
crate-type=["rlib", "cdylib"]

