[package]
name = "fluentbit"
version = "0.1.9"
authors = ["neithanmo <neithanmo@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["log", "logger"]
repository = "https://github.com/neithanmo/fluent-bit-rs"
publish = true
description = """
fluentbit is a library to build output plugins for Fluent-bit
"""

[dependencies]
libc = "0.2"
lazy_static = "1.3.0"

[dev-dependencies]
rmpv = { version = "0.4", features = ["with-serde"] }
serde_json = "1.0.27"
serde = "1.0.94"

[lib]
crate-type=["rlib", "cdylib"]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
