[package]
name = "json"
version = "0.1.0"
authors = ["Natnel Mojica <neithanmo@gmail.com>"]
edition = "2018"

[dependencies]
fluentbit = {path="../../", version="0.1.9"}
libc = "0.2"
lazy_static = "1.3.0"
rmpv = { version = "0.4", features = ["with-serde"] }
serde_json = "1.0.27"


[lib]
crate-type=["cdylib"]
